# xunmi

./: Cargo.toml  README.md  crates.js  deny.toml  search-index.js  settings.html  source-files.js
examples/: index.rs  t2s.rs  tanvity_test.rs
fixtures/: config.yml  schema.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/core/str/traits/: trait.FromStr.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
src/: config.rs  indexer.rs  input.rs  lib.rs  updater.rs
src/xunmi/: config.rs.html  indexer.rs.html  input.rs.html  lib.rs.html  updater.rs.html
xunmi/: all.html  enum.InputType.html  enum.TextLanguage.html  enum.ValueType.html  index.html  sidebar-items.js  struct.IndexConfig.html  struct.IndexUpdater.html  struct.Indexer.html  struct.InputConfig.html  struct.Schema.html
xunmi/config/: enum.TextLanguage.html  struct.IndexConfig.html
xunmi/indexer/: struct.Indexer.html
xunmi/updater/: enum.InputType.html  enum.ValueType.html  struct.IndexUpdater.html  struct.InputConfig.html
