[package]
name = "xunmi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cang-jie = "0.13.0"
fast2s = "0.2"
jieba-rs = "0.6"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.5"
serde_json = "1"
serde_yaml = "0.8"
tantivy = "0.16"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
