[package]
name = "xunmi"
version = "0.1.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/xunmi"
repository = "https://github.com/tyrchen/xunmi"
homepage = "https://github.com/tyrchen/xunmi"
description = """
A user-friendly search library base on tanvity.
"""
readme = "README.md"
keywords = ["search", "information", "retrieval", "tantivy"]
categories = ["text-processing", "database-implementations"]

[dependencies]
cang-jie = "0.13.0"
fast2s = "0.2"
jieba-rs = "0.6"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.5"
serde_json = "1"
serde_yaml = "0.8"
tantivy = "0.16"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
